sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:13: error: type mismatch;
 found   : Unit
 required: Boolean
    if (k=1) {
         ^